name:                lookout
version:             0.1.0.0
synopsis:            Haskell client for Sentry logging service.
-- description:         
homepage:            https://bitbucket.org/dpwiz/lookout
license:             MIT
license-file:        LICENSE
author:              Alexander Bondarenko
maintainer:          aenor.realm@gmail.com
-- copyright:           
category:            Logging
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  exposed-modules:
    System.Log.Lookout
    System.Log.Lookout.Interfaces
    System.Log.Lookout.Types
    System.Log.Lookout.Transport.Debug
    System.Log.Lookout.Transport.HttpConduit
  -- other-modules:
  build-depends:
    base ==4.*,
    random, uuid,
    time, old-locale,
    aeson, bytestring, text, unordered-containers,
    http-conduit, network

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:
    base,
    hspec,
    lookout,
    bytestring, unordered-containers, aeson

